@@ -1,6 +1,6 @@
 [tox]
 envlist = 
-    py25,py26,py27,jython,pypy,cover
+    py25,py26,py27,py32,jython,pypy,cover
 
 [testenv]
 commands = 
@@ -14,6 +14,14 @@ commands =
 deps =
    WebTest
 
+[testenv:py32]
+commands = 
+    python setup.py test -q
+deps =
+    https://github.com/Pylons/webob/zipball/master
+    https://github.com/Pylons/pyramid/zipball/master
+    WebTest
+
 [testenv:cover]
 basepython =
     python2.6
@@ -24,9 +32,3 @@ deps =
     coverage==3.4
     nosexcover
     WebTest
-
-# we separate coverage into its own testenv because a) "last run wins" wrt
-# cobertura jenkins reporting and b) pypy and jython can't handle any
-# combination of versions of coverage and nosexcover that i can find.
-# coverage==3.4 is required by nosexcover
-
